@@ -21,28 +21,28 @@ package org.treetank.api;
 /**
  * <h1>IAxis</h1>
  * 
- * <p>
- * Interface to iterate over the TreeTank according to an iteration logic.
- * All implementations must comply with the following:
- * <li>next() must be called exactly once after hasNext() yields true.</li>
- * <li>after hasNext() is false, the transaction points to the node where
- *     it started</li>
- * <li>before each hasNext(), the cursor is guaranteed to point to the last
- *     node found with hasNext().</li>
- * </p>
- * <p>
- * This behavior can be achieved by:
- * <li>Always call super.hasNext() as the first thing in hasNext().</li>
- * <li>Always call reset() before return false in hasNext().</li> 
- * </p>
+ * <h2>Description</h2>
+ * 
+ * <h2>Convention</h2>
+ * 
+ * <h2>User Example</h2>
+ * 
+ * <h2>Developer Example</h2>
  */
 public interface IFilter {
+  
+  /**
+   * Access transaction to which this filter is bound.
+   * 
+   * @return Transaction to which this filter is bound.
+   */
+  public IReadTransaction getTransaction();
 
   /**
-   * Access transaction to which this axis is bound.
+   * Apply filter on current node of transaction.
    * 
-   * @return Transaction to which this axis is bound.
+   * @return True if node passes filter. False else.
    */
-  public boolean test(final IReadTransaction rtx);
+  public boolean filter();
 
 }
