@@ -18,8 +18,10 @@
  
 TreeTank 4.17
 -------------
++ Refactored IFilter, added AbstractFilter not to pass transaction with each
+  call to filter().
 + Introduced Conventions for IAxis. Generic test case added to test all axis
-  for convention compliance. Bug fixed with FullTextAxis.
+  implementations for convention compliance. Bug fixed with FullTextAxis.
 + BeanUtil now supporting remove().
 + Added readme.txt to provide authoritative coding conventions.
 + Added reset() to IAxis to allow for NestedAxis.
